# reversi-engine

./: Cargo.toml  LICENSE  README.md
api/: analyze.rs  move.rs  new.rs  start.rs
public/: app.js  index.html  style.css
src/: api_logic.rs  board.rs  engine.rs  eval.rs  lib.rs  main.rs
web/: index.html  style.css
