[package]
name = "reversi-engine"
version = "0.1.0"
edition = "2021"
default-run = "reversi-engine"

[dependencies]
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
vercel_runtime = "2"

[[bin]]
name = "api-new"
path = "api/new.rs"

[[bin]]
name = "api-move"
path = "api/move.rs"
